# bkui

./: CMakeLists.txt  README.md  build_linux.sh  build_mac.sh  build_switch.sh  build_windows.bat
bkui/: CMakeLists.txt
bkui/docs/: Application_Logger_UI_需求整理.md  I18n_使用说明.md  MetaData_Event_使用说明.md
bkui/include/bkui/: bkui.hpp
bkui/include/bkui/backend/deko3d/: Deko3DDevice.hpp
bkui/include/bkui/backend/opengl/: OpenGLDevice.hpp
bkui/include/bkui/core/: Application.hpp  ApplicationHost.hpp  Event.hpp  FileSystem.hpp  I18n.hpp  Logger.hpp  MetaData.hpp  Types.hpp
bkui/include/bkui/platform/: Font.hpp  Ime.hpp  Platform.hpp
bkui/include/bkui/render/: Device.hpp  RenderCommand.hpp  RenderQueue.hpp  RenderQueueRenderer.hpp
bkui/include/bkui/render/backend/deko3d/: Deko3DDevice.hpp
bkui/include/bkui/render/backend/opengl/: OpenGLDevice.hpp
bkui/include/bkui/renderer/: RenderCommand.hpp  RenderQueue.hpp
bkui/include/bkui/resource/: FileSystem.hpp
bkui/include/bkui/rhi/: Device.hpp
bkui/include/bkui/ui/: Box.hpp  Button.hpp  CheckBox.hpp  Label.hpp  LogOverlayView.hpp  ProgressBar.hpp  ScrollGestureController.hpp  ScrollView.hpp  Slider.hpp  View.hpp
bkui/src/backend/deko3d/: Deko3DDevice.cpp
bkui/src/backend/opengl/: OpenGLDevice.cpp  OpenGLDeviceSwitchStub.cpp
bkui/src/core/: Application.cpp  ApplicationHost.cpp  FileSystem.cpp  I18n.cpp  Logger.cpp
bkui/src/platform/: SDLPlatform.cpp  SwitchPlatform.cpp
bkui/src/platform/sdl/: sdl_audio.cpp  sdl_font.cpp  sdl_ime.cpp  sdl_input.cpp  sdl_platform.cpp  sdl_platform_internal.hpp  sdl_video.cpp
bkui/src/platform/switch/: switch_audio.cpp  switch_font.cpp  switch_ime.cpp  switch_input.cpp  switch_platform.cpp  switch_platform_internal.hpp  switch_video.cpp
bkui/src/render/: RenderQueue.cpp  RenderQueueRenderer.cpp
bkui/src/render/backend/deko3d/: Deko3DDevice.cpp
bkui/src/render/backend/opengl/: OpenGLDevice.cpp  OpenGLDeviceSwitchStub.cpp
bkui/src/renderer/: RenderQueue.cpp
bkui/src/resource/: FileSystem.cpp
bkui/src/ui/: Box.cpp  Button.cpp  CheckBox.cpp  Label.cpp  LogOverlayView.cpp  ProgressBar.cpp  ScrollGestureController.cpp  ScrollView.cpp  Slider.cpp  View.cpp
demo/: CMakeLists.txt
demo/macos/: Info.plist.in
demo/src/: 1.cpp  base_main.cpp  demo1.cpp  demo_support.cpp  demo_support.hpp  main.cpp  neon_grid_demo.cpp  perf_demo.cpp  ui_tree_demo.cpp
docs/: 实施文档.md  当前目标.md  编译文档.md  项目现状与后续开发任务清单.md
resources/i18n/: en.json  zh-CN.json
resources/shaders/deko3d/: triangle_fsh.glsl  triangle_vsh.glsl  ui_fsh.glsl  ui_vsh.glsl
resources/ui/: main.json
