cmake_minimum_required(VERSION 3.22)

project(BKUI LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(BKUI_RUNTIME_OUTPUT_DIR "${CMAKE_BINARY_DIR}/bin")
set(BKUI_LIBRARY_OUTPUT_DIR "${CMAKE_BINARY_DIR}/lib")

file(MAKE_DIRECTORY "${BKUI_RUNTIME_OUTPUT_DIR}")
file(MAKE_DIRECTORY "${BKUI_LIBRARY_OUTPUT_DIR}")

add_subdirectory(bkui)
add_subdirectory(demo)
